--- a/pom.xml
+++ b/pom.xml
@@ -15,4 +15,12 @@
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.ulfric.commons</groupId>
+			<artifactId>commons</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+	</dependencies>
+
 </project>
